--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.ProjectTHFinal"
         tools:targetApi="31">
         <activity
+            android:name=".ui.UpdateCategoryActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.CreateCategoryActivity"
             android:exported="false"
             android:label="@string/title_activity_create_category"
